# pyprocgen

./: .gitignore  Biome_Generation_Schema.ods  Biome_generation_schema.ods  LICENSE  Procedural_generation_2D.py  README.md  hello_git.txt  procedural_generation_2D.py  pyprocgen.py  pyproject.toml  test_trees.py  testing_probabilities.py  tests.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
biomes_grounds/: Desert_Cool.ppm  Desert_Scub_Cool.ppm  Desert_Scub_Tropical.ppm  Desert_Scub_Warm.ppm  Desert_Tropical.ppm  Desert_Warm.ppm  Dry_Forest_Tropical.ppm  Dry_Forest_Warm.ppm  Moist_Forest_Cool.ppm  Moist_Forest_Tropical.ppm  NULL.ppm  Rain_Forest.ppm  Rocks_and_ice.ppm  Steppe.ppm  Taiga_Desert.ppm  Taiga_Wet.ppm  Toundra_Dry.ppm  Toundra_Moist.ppm  Toundra_Rain.ppm  Tropical_Forest_Tropical.ppm  Tropical_Forest_Warm.ppm  Very_Dry_Forest.ppm  Water.ppm  Wet_Forest_Tropical.ppm  Woodland_Thorn.ppm
biomes_images/: Desert_Boreal.ppm  Desert_Cool.ppm  Desert_Scub_Cool.ppm  Desert_Scub_Tropical.ppm  Desert_Scub_Warm.ppm  Desert_Tropical.ppm  Desert_Warm.ppm  Dry_Forest_Tropical.ppm  Dry_Forest_Warm.ppm  Eau.ppm  FSch.ppm  FTpr.ppm  FTrp.ppm  Maqi.ppm  Moist_Forest_Cool.ppm  Moist_Forest_Tropical.ppm  Moist_Forest_Warm.ppm  NULL.ppm  Rain_Forest.ppm  RoEG.ppm  Rocks_and_ice.ppm  Steppe.ppm  Steppe_Woodland_Thorn.ppm  Taiga_Desert.ppm  Taiga_Dry.ppm  Taiga_Moist.ppm  Taiga_Rain.ppm  Taiga_Wet.ppm  TndS.ppm  Toun.ppm  Toundra_Dry.ppm  Toundra_Moist.ppm  Toundra_Rain.ppm  Toundra_Wet.ppm  Tropical_Forest_Tropical.ppm  Tropical_Forest_Warm.ppm  Very_Dry_Forest.ppm  Wet_Forest_Cool.ppm  Wet_Forest_Tropical.ppm  Wet_Forest_Warm.ppm  (+2 more)
image_creation/: __init__.py  p_image_creation.py
images/: DsCh.ppm  FPlv.ppm  FTSc.ppm  MaqD.ppm  MaqS.ppm  Toun.ppm
informations/: Biome_generation_schema.ods  class_diagram  class_diagram.drawio  class_diagram.md
modules/: decisional.py  encyclopedia_functions.py  image_creation.py  perlin_noise.py  settings.py  short_class_import.py  trees_generation.py  utilities.py
modules/classes/: Biome.py  BoardBox.py  BoardColor.py  Box.py  BoxWithTree.py  Color.py  Encyclopedia.py  Position.py  Seed.py  Tree.py  __init__.py
src/_pyprocgen/: __init__.py  block.py  climate.py  world.py
src/pyprocgen/: __init__.py  __main__.py
tests/_pyprocgen/: test_block.py  test_climate.py  test_world.py
tests/pyprocgen/: test___init__.py  test___main__.py
